 . CocosNode: removed deprecated 'named' methods (issue #91)
 . CocosNode: lazy allocations with timers, children & actions (issue #94)
 . Director: propagation of Touch events can be stopped (issue #96)
 . Documentation: properties are documented (issue #100)
 . Menu: conforms to CocosNodeSize protocol (issue #99)
 . Menu: support both vertical & horizontal alignment (issue #97)
 . Misc: misc fixes detected by static analyzer (issue #90)
 . Texture2D: creates the textures with clamp to edge and mag filter to linear (issue #95)

version 0.5.3 - 18-Nov-2008
 . Actions: Repeat fixes (issue #81)
 . CocosNode: added numberOfRunningActions (issue #72)
 . CocosNode: removeAll fixes (issue #74)
 . CocosNode: stopAction fix (issue #82)
 . CocosNode: supports flipX and flipY (issue #53)
 . CocosNode: supports scaleX and scaleY (issue #54) 
 . Layer: isTouchEnabled, isAccelerometerEnabled are properties (issue #70)
 . Menu: supports CocosNodeOpacity protocol (issue #76)
 . MultiplexLayer: added switchToAndReleaseMe (issue #71)
 . OpenGLSupport: performance improvements (issue #84)
 . Particles: ParticleCount is a property (issue #68)
 . Texture2D: images & RGBA8 fixes (issue #86)
 . TextureMgr: Simulator supports PVRTC images (issue #75)
 . TextureMgr: removeTexture fixed (issue #85)
 . TextureMgr: supports CGImageRef (issue #87)
 . TileMapAtlas: supports TGA RLE format (issue #38)

version 0.5.2 - 04-Nov-2008
 . All: assign [super init] to self (issue #61)
 . Documentation: Add AUTHORS file with the cocos2d's contributors (issue #62)
 . CocosNode: added tags (getByTag, removeByTag)  (issue #52)
 . CocosNode: fixed big memory leak (issue #67)
 . Director: able to remove event enabled nodes (issue #56)
 . Director: can be hidden / unhidden (issue #55)
 . License: Explicit paragraphs that allows cocos2d + closed source projects (issue #57)
 . MenuItemImage: able to modify inner sprites (issue #58)