@@ -15,7 +15,7 @@ Contributors (alphabetically ordered):
 	* Fradj Johann: patches for CocosNode, Layer, MultiplexLayer
     * Ishaq Malik: patches for CocosNode
     * lukeman: patches for MenuItem
-	* Mitch: patches for Menu
+	* Mitch: patches for Menu, added MenuItemToggle
     * Serge Kolgan: patches for CocosNode
     * Steve Israelson: patches for Scheduler, Actions, Transitions
 	* Steve Oldmeadow: patches for Texture2D
